# SWE-Python

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.trixie  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: development.yml
docs/: er-diagram.md  index.md
docs/diagrams/src/: er-diagram.plantuml
docs/modules/: __init__.md  entity.md  repository.md  rest.md  security.md  service.md
extras/: dependency-check.py
extras/compose/keycloak/: compose.yml
extras/compose/postgres/: ReadMe.md
extras/compose/prometheus-grafana/: prometheus.yml
src/project/: __init__.py  __main__.py  asgi_server.py  fastapi_app.py
src/project/config/: __init__.py  config.py  dev_mode.py  server.py  tls.py
src/project/entity/: address.py  book.py  member.py
src/project/repository/: __init__.py  pageable.py
tests/integration/: common_test.py  constants.py  simple_test.py
tests/integration/graphql/: mutation_test.py
tests/integration/rest/: conftest.py  delete_test.py  get_by_id_test.py  get_test.py  post_test.py  put_test.py
tests/lasttest/: locustfile.py
