[project]
name = "project"
version = "0.1.0"
description = "This is a Python package for the SWE API."
readme = "README.md"
authors = [
    { name = "Ole Menke", email = "meol1013@h-ka.de" },
    { name = "Paul Braeuninger", email = "brpa1033@h-ka.de" },
]
maintainers= [
    { name = "Ole Menke", email = "meol1013@h-ka.de" },
    { name = "Paul Braeuninger", email = "brpa1033@h-ka.de" },
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "uvicorn>=0.42.0",
]

[project.scripts]
project = "project:main"

[build-system]
requires = ["uv_build==0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.135.1",
    "gevent>=25.9.1",
    "httptools>=0.7.1",
    "itsdangerous>=2.2.0",
    "locust>=2.43.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-html>=4.2.0",
    "pytest-mock>=3.15.1",
    "werkzeug>=3.1.7",
]
doc = [
    "griffe>=2.0.1",
    "markdown>=3.10.2",
    "mistune>=3.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-build-plantuml-plugin>=2.1.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mkdocstrings-python>=2.0.3",
]

[tool.uv]
default-groups = "all"
